--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,8 +1,23 @@
 <html>
-    <head>
 
-    </head>
-    <body>
-        <h1>Hotel? Trivago.</h1>
-    </body>
+<head>
+    <script src="jquery-3.3.1.min.js"></script>
+    <script src="popper.min.js"></script>
+    <link rel="stylesheet" href="bootstrap-4.5.0-dist/css/bootstrap.min.css" />
+    <script src="bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
+</head>
+
+<body>
+    <h1>Hotel? Trivago.</h1>
+    <div class="card" style="width: 18rem;">
+        <img src="https://www.google.rs/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
+            class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Google</h5>
+            <p class="card-text">This fucker does some goolgeing.</p>
+            <a href="https://www.google.rs/" class="btn btn-primary">Go to Google</a>
+        </div>
+    </div>
+</body>
+
 </html>
