--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,10 +1,13 @@
 <html>
 
 <head>
-    <script src="jquery-3.3.1.min.js"></script>
-    <script src="popper.min.js"></script>
-    <link rel="stylesheet" href="bootstrap-4.5.0-dist/css/bootstrap.min.css" />
-    <script src="bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
+    <script src="jquery-3.3.1.min.js" type='text/javascript'></script>
+    <script src="popper.min.js" type='text/javascript'></script>
+    <link rel="stylesheet" href="bootstrap-4.5.0-dist/css/bootstrap.min.css" type='text/css' />
+    <script src="bootstrap-4.5.0-dist/js/bootstrap.min.js" type='text/javascript'></script>
+    <link href='bootstrap-datepicker-1.9.0/bootstrap-datepicker.min.css' rel='stylesheet' type='text/css' />
+    <script src='bootstrap-datepicker-1.9.0/bootstrap-datepicker.min.js' type='text/javascript'></script>
+    <script src="types.js" type='text/javascript'></script>
 </head>
 
 <body>
@@ -18,6 +21,27 @@
             <a href="https://www.google.rs/" class="btn btn-primary">Go to Google</a>
         </div>
     </div>
+    <br>
+    <div class='container' style='margin-top: 100px;'>
+        <input type='text' class="form-control" id='datepicker' style='width: 300px;'> <br>
+        <input type='text' class="form-control" data-provide="datepicker" style='width: 300px;'>
+    </div>
+
+    <div class="input-group input-daterange">
+        <input type="text" class="form-control" value="2012-04-05">
+        <div class="input-group-addon">to</div>
+        <input type="text" class="form-control" value="2012-04-19">
+    </div>
+    
+    <!-- Script -->
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#datepicker').datepicker();
+        });
+        $('.input-daterange input').each(function () {
+            $(this).datepicker('clearDates');
+        });
+    </script>
 </body>
 
 </html>
