--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+    <title>ApartmentsWP</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <script src="jquery-3.3.1.min.js" type='text/javascript'></script>
     <script src="popper.min.js" type='text/javascript'></script>
     <link rel="stylesheet" href="bootstrap-4.5.0-dist/css/bootstrap.min.css" type='text/css' />
@@ -32,7 +34,7 @@
         <div class="input-group-addon">to</div>
         <input type="text" class="form-control" value="2012-04-19">
     </div>
-    
+
     <!-- Script -->
     <script type="text/javascript">
         $(document).ready(function () {
