openlayers and index body body

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -45,7 +45,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto ml-4">
                 <li class="nav-item"></li>
-                    <a class="nav-link" href="profile.html">Nalog</a>
+                <a class="nav-link" href="profile.html">Nalog</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">Log Out</a>
@@ -62,8 +62,6 @@
             </ul>
         </div>
 
-        <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
-        </ul>
         <form>
             <table>
                 <tr>
@@ -74,16 +72,73 @@
                     <td></td>
                 </tr>
                 <tr>
-                    <td><label class="h4 mr-4">Log-In:</label></td>
+                    <td><label class="h5 mr-4">Log-In:</label></td>
                     <td><input type="text"></td>
                     <td><label class="mr-2"></label></td>
                     <td><input type="password"></td>
-                    <td><button class="ml-3" type="submit" style="background-color: orange;">Log In</button></td>
+                    <td><button class="ml-3 btn btn-primary" type="submit">Log In</button></td>
                 </tr>
             </table>
         </form>
     </header>
 
+    <!-- BODY -->
+
+    <div class="container">
+        <div class="row">
+            <div class="col-8">
+                search form
+            </div>
+            <div class="col-s4">
+                map
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <hr/>
+            </div>
+            <div class="col-auto">
+                <b>Ili, registrujte se</b>
+            </div>
+            <div class="col">
+                <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col"></div>
+            <div class="col-auto">
+                <table class="table">
+                    <tr>
+                        <td>Ime:</td>
+                        <td><input/></td>
+                        <td>Korisničko ime:</td>
+                        <td><input/></td>
+                    </tr>
+                    <tr>
+                        <td>Prezime:</td>
+                        <td><input/></td>
+                        <td>Lozinka:</td>
+                        <td><input/></td>
+                    </tr>
+                    <tr>
+                        <td>Pol:</td>
+                        <td><input/></td>
+                        <td>Ponovite lozinku:</td>
+                        <td><input/></td>
+                    </tr>
+                    <tr>
+                        <td colspan="4" class="text-center align-middle">
+                            <button type="submit" class="btn btn-primary">Registracija</button>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div class="col"></div>
+        </div>
+    </div>
 </body>
 
 </html>
