--- a/openlayersmaps/index.html
+++ b/openlayersmaps/index.html
@@ -9,6 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+    <script src="map.js"></script>
     <style>
       .map {
         width: 100%;
@@ -22,8 +23,9 @@
   </head>
   <body>
     <div id="mapSearch" class="map"></div>
-    <div id="mapResults" class="map"></div>
-
-    <script src="map.js"></script>
+    <div id="mapResults" class="map">
+      <div id="popup"></div>
+    </div>
+    <script type="text/javascript">initSearchMap(undefined);initResultsMap(true, undefined);addAllApartmentPointsResultMap([[0,0],[40,20]]);</script>
   </body>
 </html>
