--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,14 +1,38 @@
 <html>
 
 <head>
+
+    <!-- default for every html -->
+
+    <meta charset="utf-8">
     <title>ApartmentsWP</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <script src="jquery-3.3.1.min.js" type='text/javascript'></script>
     <script src="popper.min.js" type='text/javascript'></script>
     <link rel="stylesheet" href="bootstrap-4.5.0-dist/css/bootstrap.min.css" type='text/css' />
     <script src="bootstrap-4.5.0-dist/js/bootstrap.min.js" type='text/javascript'></script>
+
+    <!---->
+
+    <!-- datepicker (requires bootstrap, jquery, popper) -->
+
     <link href='bootstrap-datepicker-1.9.0/bootstrap-datepicker.min.css' rel='stylesheet' type='text/css' />
     <script src='bootstrap-datepicker-1.9.0/bootstrap-datepicker.min.js' type='text/javascript'></script>
+
+    <!---->
+
+    <!-- openlayers maps custom build for search and results (requires boostrap4.5, jquery) -->
+
+    <!-- Pointer events polyfill for old browsers, see https://caniuse.com/#feat=pointer -->
+    <script src="openlayersmap/util/elm-pep.js"></script>
+    <!-- polyfill with features: https://cdn.polyfill.io/v2/polyfill.min.js?features=fetch,requestAnimationFrame,Element.prototype.classList,URL -->
+    <script src="openlayersmap/util/polyfill.min.js"></script>
+    <script src="openlayersmap/map.3edeca68.js"></script>
+    <link rel="stylesheet" href="openlayersmap/map.bb28b584.css">
+
+    <!---->
+
+
     <script src="types.js" type='text/javascript'></script>
 </head>
 
@@ -98,7 +122,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <hr/>
+                <hr />
             </div>
             <div class="col-auto">
                 <b>Ili, registrujte se</b>
@@ -113,21 +137,21 @@
                 <table class="table">
                     <tr>
                         <td>Ime:</td>
-                        <td><input/></td>
+                        <td><input /></td>
                         <td>Korisničko ime:</td>
-                        <td><input/></td>
+                        <td><input /></td>
                     </tr>
                     <tr>
                         <td>Prezime:</td>
-                        <td><input/></td>
+                        <td><input /></td>
                         <td>Lozinka:</td>
-                        <td><input/></td>
+                        <td><input /></td>
                     </tr>
                     <tr>
                         <td>Pol:</td>
-                        <td><input/></td>
+                        <td><input /></td>
                         <td>Ponovite lozinku:</td>
-                        <td><input/></td>
+                        <td><input /></td>
                     </tr>
                     <tr>
                         <td colspan="4" class="text-center align-middle">
