search map placed

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -108,14 +108,16 @@
 
     <!-- BODY -->
 
-    <div class="container">
-        <div class="row">
-            <div class="col-8">
-                search form
+    <div class="container mt-3 mb-4">
+        <div class="row" style="height: 400px;">
+            <div class="col-8 d-flex align-items-center text-center" style="width: 66%;">
+                <div class="container">
+                    <form>
+                        <table
+                    </form>
+                </div>
             </div>
-            <div class="col-s4">
-                map
-            </div>
+            <div class="col-s4"id="mapSearch" style="width: 33%;"></div>
         </div>
     </div>
 
@@ -163,6 +165,7 @@
             <div class="col"></div>
         </div>
     </div>
+    <script type="text/javascript">initSearchMap(undefined);</script>
 </body>
 
 </html>
