login rest started

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -109,11 +109,11 @@
     <!-- BODY -->
 
     <div class="container mt-3 mb-4">
-        <div class="row" style="height: 400px;">
+        <div class="row align-items-center" style="height: 400px;">
             <div class="col-8 d-flex align-items-center text-center" style="width: 66%;">
                 <div class="container">
                     <form>
-                        <table
+                        nesto
                     </form>
                 </div>
             </div>
