--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -34,6 +34,7 @@
 
 
     <script src="types.js" type='text/javascript'></script>
+    <script src="user.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -86,7 +87,7 @@
             </ul>
         </div>
 
-        <form>
+        <form id="login">
             <table>
                 <tr>
                     <td></td>
@@ -97,9 +98,9 @@
                 </tr>
                 <tr>
                     <td><label class="h5 mr-4">Log-In:</label></td>
-                    <td><input type="text"></td>
+                    <td><input type="text" name="loginUsername"></td>
                     <td><label class="mr-2"></label></td>
-                    <td><input type="password"></td>
+                    <td><input type="password" name="loginPassword"></td>
                     <td><button class="ml-3 btn btn-primary" type="submit">Log In</button></td>
                 </tr>
             </table>
