register rest almost done

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -36,9 +36,6 @@
     <script src="types.js" type='text/javascript'></script>
 
     <script src="user.js" type="text/javascript"></script>
-
-    <script src="services.js" type='text/javascript'></script>
-
 </head>
 
 <body>
@@ -167,7 +164,7 @@
 	                    </tr>
 	                    <tr>
 	                        <td colspan="4" class="text-center align-middle">
-	                            <button type="submit" class="btn btn-primary" onclick="register()">Registracija</button>
+	                            <button type="submit" class="btn btn-primary">Registracija</button>
 	                        </td>
 	                    </tr>
 	                </table>
