show/hide on login

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -73,16 +73,16 @@
                 <li class="nav-item d-none" id="profileElement">
                     <a class="nav-link" href="profile.html">Nalog</a>
                 </li>
-                <li class="nav-item" id="logoutElement">
+                <li class="nav-item d-none" id="logoutElement">
                     <a class="nav-link" id="logout" href="#">Log Out</a>
                 </li>
                 <li class="nav-item d-none" id="reservationElement">
                     <a class="nav-link" href="reservations.html">Rezervacije</a>
                 </li>
-                <li class="nav-item d-none" id="addApartmentElement">
+                <li class="nav-item d-none HOST" id="addApartmentElement">
                     <a class="nav-link" href="addApartment.html">Dodaj Apartman</a>
                 </li>
-                <li class="nav-item d-none" id="usersElement">
+                <li class="nav-item d-none ADMINISTRATOR HOST" id="usersElement">
                     <a class="nav-link" href="users.html">Korisnici</a>
                 </li>
             </ul>
@@ -144,7 +144,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container" id="registration">
         <div class="row">
             <div class="col">
                 <hr />
