login error mesage/alert

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -125,6 +125,7 @@
                     <td><input type="password" name="loginPassword"></td>
                     <td><button class="ml-3 btn btn-primary" type="submit">Log In</button></td>
                 </tr>
+                <tr id="loginErrMessage"></tr>
             </table>
         </form>
     </header>
