--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -33,9 +33,9 @@
     <!---->
 
 
-    <script src="types.js" type='text/javascript'></script>
-
+    <script src="types.js" type="text/javascript"></script>
     <script src="user.js" type="text/javascript"></script>
+    <script src="search.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -202,7 +202,6 @@
             <div class="col"></div>
         </div>
     </div>
-    <script type="text/javascript">initSearchMap(undefined);</script>
 </body>
 
 </html>
