--- a/WebContent/test.html
+++ b/WebContent/test.html
@@ -31,7 +31,7 @@
 
     <div class="input-group input-daterange">
         <input type="text" class="form-control" value="2012-04-05">
-        <div class="input-group-addon">to</div>
+        <div class="input-group-addon"> - </div>
         <input type="text" class="form-control" value="2012-04-19">
     </div>
 
