--- a/WebContent/addApartment.html
+++ b/WebContent/addApartment.html
@@ -30,7 +30,7 @@
     <script src="types.js" type="text/javascript"></script>
     <script src="user.js" type="text/javascript"></script>
     <script src="search.js" type="text/javascript"></script>
-    <script src="apartments.js" type='text/javascript'></script>
+    <script src="addApartment.js" type='text/javascript'></script>
 </head>
 
 <body>
