server side for edit profile done

--- a/WebContent/addApartment.html
+++ b/WebContent/addApartment.html
@@ -144,7 +144,8 @@
                             <td><input type="number" min="0" id="streetNum" /></td>
                         </tr>
                         <tr>
-                            <td colspan="2">Oprema:</td>
+                            <td></td>
+                            <td>Oprema:</td>
                             <td colspan="2"><select id="amenities" multiple></select></td>
                         </tr>
                         <tr>
