--- a/WebContent/profile.html
+++ b/WebContent/profile.html
@@ -115,7 +115,8 @@
             <form id="editProfileForm">
                 <table class="table">
                     <tr>
-                        <td colspan="2">Korisničko ime:</td>
+                        <td></td>
+                        <td>Korisničko ime:</td>
                         <td colspan="2"><input id="profileUsername" disabled></td>
                     </tr>
                     <tr>
