search appartments, basic html and map support

--- a/WebContent/test.html
+++ b/WebContent/test.html
@@ -23,6 +23,15 @@
             <a href="https://www.google.rs/" class="btn btn-primary">Go to Google</a>
         </div>
     </div>
+    <div class="card" style="width: 18rem;">
+        <img src="https://www.google.rs/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
+            class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Google</h5>
+            <p class="card-text">This fucker does some goolgeing.</p>
+            <a href="https://www.google.rs/" class="btn btn-primary">Go to Google</a>
+        </div>
+    </div>
     <br>
     <div class='container' style='margin-top: 100px;'>
         <input type='text' class="form-control" id='datepicker' style='width: 300px;'> <br>
