little improvements in js

--- a/WebContent/addApartment.html
+++ b/WebContent/addApartment.html
@@ -117,7 +117,7 @@
                                     <option value="SOBA">SOBA</option>
                                 </select> </td>
                             <td>Cena noćenja (RSD):</td>
-                            <td><input type="number" min="0" id="pricePerNight" /></td>
+                            <td><input type="number" min="0" id="pricePerNight" autofocus /></td>
                         </tr>
                         <tr>
                             <td>Zipcode:</td>
@@ -146,7 +146,7 @@
                         <tr>
                             <td></td>
                             <td>Oprema:</td>
-                            <td colspan="2"><select id="amenities" multiple></select></td>
+                            <td colspan="2"><select id="amenities" multiple size="5"></select></td>
                         </tr>
                         <tr>
                             <td colspan="4" class="text-center align-middle">
