--- a/WebContent/profile.html
+++ b/WebContent/profile.html
@@ -135,7 +135,7 @@
                                 <option value="POTATO">POTATO</option>
                             </select> </td>
                         <td>Trenutna lozinka:</td>
-                        <td><input type="password" id="profileOldPassword" /><span
+                        <td><input type="password" id="profileOldPassword" autofocus /><span
                                 class="alert alert-danger d-none ml-2" role="alert" id="profileOldPasswordError"></span>
                         </td>
                     </tr>
