country added in addApartment request

--- a/WebContent/addApartment.html
+++ b/WebContent/addApartment.html
@@ -37,8 +37,7 @@
     <header class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="index.html">
             <label>Apartment?</label>
-            <svg version="1.1" width="102" height="32" viewBox="0 0 102 32" class="siteheader__logo"
-                aria-labelledby="header-logo-id" role="img" focusable="false" tabindex="-1">
+            <svg version="1.1" width="102" height="32" viewBox="0 0 102 32" class="siteheader__logo" aria-labelledby="header-logo-id" role="img" focusable="false" tabindex="-1">
                 <title id="header-logo-id">
                     trivago
                 </title>
@@ -83,8 +82,7 @@
         </div>
 
         <!--Modal for logout fail-->
-        <div class="modal fade" id="ModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-            aria-hidden="true">
+        <div class="modal fade" id="ModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -144,9 +142,10 @@
                             <td><input type="number" min="0" id="streetNum" /></td>
                         </tr>
                         <tr>
-                            <td></td>
+                            <td>Država:</td>
+                            <td><input id="country" /></td>
                             <td>Oprema:</td>
-                            <td colspan="2"><select id="amenities" multiple size="5"></select></td>
+                            <td><select id="amenities" multiple size="5"></select></td>
                         </tr>
                         <tr>
                             <td colspan="4" class="text-center align-middle">
